# fishbowl

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
crates/ekg-contracts/: Cargo.toml
crates/ekg-core/: Cargo.toml
crates/ekg-daemon/: Cargo.toml
crates/ekg-daemon/src/: http.rs  lib.rs  main.rs  native.rs  protocol.rs  source.rs
crates/ekg-daemon/tests/: daemon_performance.rs  http_security.rs  native_dispatch.rs  native_process.rs  protocol_replay.rs  sqlite_retrieval.rs
crates/ekg-storage/: Cargo.toml
crates/ekg-storage/examples/: database_probe.rs
crates/ekg-storage/src/: disk.rs  import.rs  lib.rs  schema.rs  snapshot.rs  write.rs
crates/ekg-storage/tests/: database_migration.rs  disk_observations.rs  engineering_query_golden.rs  preflight.rs  query_knowledge.rs  query_performance.rs  write_transactions.rs
crates/fishbowl-contracts/: Cargo.toml
crates/fishbowl-core/: Cargo.toml
crates/fishbowl-core/src/: graph_expansion.rs  hierarchy.rs  lib.rs
crates/fishbowl-core/tests/: bilingual_golden.rs  engineering_query_golden.rs  graph_expansion.rs  graph_expansion_performance.rs  graph_expansion_quality.rs  guardrail_golden.rs  hierarchy.rs  hierarchy_performance.rs  policy_parity.rs  relevance_parity.rs  retrieval_performance.rs
crates/fishbowl-daemon/: Cargo.toml
crates/fishbowl-daemon/src/: disk_watch.rs  http.rs  lib.rs  main.rs  native.rs  protocol.rs  source.rs
crates/fishbowl-daemon/tests/: daemon_performance.rs  http_security.rs  native_dispatch.rs  native_process.rs  protocol_replay.rs  sqlite_retrieval.rs
crates/fishbowl-storage/: Cargo.toml
docs/: agent-bootstrap-prompt.md  agent-log.md  handoff.md  implementation-plan.md  mcp-client-configuration.md  native-production-cutover.md  rust-database-recovery.md
docs/decisions/: ADR-20260713-modular-local-service.md  ADR-20260714-bounded-indexed-case-operations.md  ADR-20260717-persistent-disk-measurement-cache.md  ADR-20260717-task-disk-growth-ledger.md  ADR-20260717-unified-daemon-protocol-v2.md  ADR-20260718-reliable-write-confirmation-and-daemon-observability.md  ADR-20260718-safe-cli-self-update.md  ADR-20260718-single-finalization-and-equivalent-node-reuse.md  ADR-20260718-stable-user-daemon-port.md  ADR-20260719-explicit-curation-and-disk-observation-retirement.md
docs/plans/: 2026-07-16-rust-core-migration-tdd.md
docs/reports/: 2026-07-17-disk-cache-benchmark.md  2026-07-17-retrieval-p0-acceptance.md
docs/specs/: 2026-07-16-rust-hierarchical-retrieval.md
fixtures/contracts/: errors.json  get_case.json  preflight.json  query_knowledge.json
fixtures/retrieval/: bilingual_golden.json  engineering_query_golden.json  guardrail_golden.json
scripts/: build-native.mjs  copy-static-assets.mjs  native-daemon-benchmark.mjs  prepare-bin.mjs  rust-query-shadow.mjs
src/: index.ts  version.ts
src/application/: backend.ts  contracts.ts  errors.ts  finalize-work.ts  knowledge-service.ts  operation-metrics.ts  preflight-cache.ts  query-planner.ts  relevance.ts
src/cases/: case-graph.ts
src/cli/: arguments.ts  direct-execution.ts  help.ts  main.ts  run-command.ts  update.ts
src/daemon/: client.ts  config.ts  lifecycle.ts  macos-launchd.ts  migration.ts  operations.ts  platform.ts  protocol.ts  server.ts  windows-run.ts
src/domain/: errors.ts  fingerprint.ts  graph-rules.ts  node-data.ts  policies.ts
src/http/: server.ts  (+1 more)
(+102 files in other folders)
