[workspace]
members = ["crates/ekg-contracts", "crates/ekg-core", "crates/ekg-daemon"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
