[workspace]
members = ["crates/ekg-contracts", "crates/ekg-core", "crates/ekg-daemon", "crates/ekg-storage"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
axum = "0.8"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower = { version = "0.5", features = ["util"] }
