[package]
name = "ekg-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ekg-core = { path = "../ekg-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "ekg-rust-core"
path = "src/main.rs"
