[package]
name = "ekg-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ekg-contracts = { path = "../ekg-contracts" }
ekg-core = { path = "../ekg-core" }
rusqlite = { workspace = true, features = ["backup"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true

[lib]
path = "src/lib.rs"
