[package]
name = "fishbowl-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
fishbowl-contracts = { path = "../fishbowl-contracts" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
