[package]
name = "fishbowl-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fishbowl-contracts = { path = "../fishbowl-contracts" }
fishbowl-core = { path = "../fishbowl-core" }
fishbowl-storage = { path = "../fishbowl-storage" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
futures-util.workspace = true

[dev-dependencies]
tower.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "fishbowl-rust-core"
path = "src/main.rs"
